# IERG4210

./: .dockerignore  .env.example  .gitignore  Dockerfile  STARTUP.md  aws.task.json  components.json  docker-compose.yml  eslint.config.js  nginx.conf  package-lock.json  package.json
.github/workflows/: aws.yml  azure.yml
api/: .gitignore  Dockerfile  alembic.ini  limiter.py  main.py  openapi-merge.json  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 14014b3bdf47_paypal.py  1958e1fb4c80_remove_max_age_from_database.py  256c6bc206ea_orders.py  5140acdf3025_init.py  5ff8855d0322_generalize_transaction_logic.py  698be80e52f6_timezone.py  6b552e8b552f_reset_token_hash.py  71129d105cbb_orders.py  72cb7bbf67ed_paypal_authorization_id_field.py  73acc71a3790_ip_and_useragent.py  9a6b83c4025f_user_model_update.py  a5019bf5cb08_regen_constraints.py  da8da6bb3874_add_test_accounts.py  e2f5707f9f22_devdata.py  f412b7be0963_cache_location_in_redis.py  fe2da2ca6dbc_reset_verify_tokens.py  ff22f393231f_cascade.py
api/db/: __init__.py  base.py  categories.py  products.py  shop.py  users.py
api/models/: __init__.py  app.py  base.py  categories.py  errors.py  images.py  links.py  orders.py  products.py  root.py  tokens.py  users.py
api/routes/: __init__.py  categories.py  common.py  images.py  orders.py  paypal.py  products.py  root.py  transactions.py  users.py
api/templates/: email_action.html
app/: app.css  root.tsx  types.d.ts
app/components/: theme-provider.tsx
app/components/category/: index.tsx  product-card.tsx
app/components/footer/: index.tsx
app/components/img-wrapper/: index.tsx
app/components/link-wrapper/: index.tsx
app/components/navbar/: index.tsx  login-form.tsx  navbar.tsx
app/components/ui/: form-tanstack.tsx
app/hooks/: cart-provider.tsx  theme-provider.tsx
app/lib/: api.ts  utils.ts
app/navbar/: login-form.tsx  navbar.tsx
app/routes/: _index.tsx  c.$categoryId.tsx  home.tsx  p.$productId.tsx
app/welcome/: welcome.tsx
db/: Dockerfile  init.sql
web/: .dockerignore  .gitignore  components.json  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
web/app/: app.css  config.ts  context.server.ts  context.ts  cookies.server.ts  cookies.ts  entry.server.tsx  root.tsx  schema.ts  session.server.ts  storage.ts  types.d.ts  vite-env.d.ts
web/app/components/: cart.tsx  error-page.tsx  img-wrapper.tsx  tablegenerator.tsx
web/app/context/: nonce.tsx
web/app/hooks/: auth-provider.tsx  auth.tsx  cart-provider.tsx  nonce.tsx  theme-provider.tsx  theme.tsx
web/app/lib/: api.d.ts  errors.ts  get-client-ip-address.ts  get-headers.ts  honeypot.server.ts  (+3 more)
(+47 files in other folders)
