[project]
name = "IERG4210-API"
version = "0.1.0"
description = "API for IERG4210 project"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi-decorators>=1.0.19",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.134.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-partial>=0.10.2",
    "sqlalchemy>=2.0.47",
    "sqlmodel>=0.0.37",
    "alembic-postgresql-enum>=1.10.0",
    "requests>=2.33.1",
    "paypal",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.uv.sources]
paypal = { path = "./generated/paypal" }

[dependency-groups]
dev = [
    "alembic[tz]>=1.18.4",
    "openapi-generator-cli>=7.21.0",
    "poethepoet>=0.44.0",
]

[tool.poe.executor]
type = "simple"

[tool.poe.tasks]
paypal = """openapi-generator-cli generate -i \
            https://raw.githubusercontent.com/paypal/paypal-rest-api-specifications/refs/heads/main/openapi/checkout_orders_v2.json \
            -g python \
            --additional-properties=packageName=paypal \
            -o generated/paypal
        """

build = { sequence = ["paypal"] }
